fix overlap of text on browser

--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,7 @@ span, label,p {
 
 .eq-block {
     display: table;
-       border-collapse: collapse;  /* remove table-like spacing */
+    border-collapse: collapse;
 }
 
 .eq-row {
@@ -271,19 +271,22 @@ span, label,p {
 .eq-right {
     display: table-cell;
     padding: 0;
+    vertical-align: baseline;
 }
 
+/* FIX */
 .eq-left {
-    display: inline-block;
-    width: 40px;        /* shrink to fit text */
-    margin: 0;
-    padding: 0;
-    white-space: nowrap; /* prevents weird wrapping that adds space */
+    width: 85px;          /* enough for Rd1_platform */
+    white-space: nowrap;
+    text-align: right;
+    padding-right: 10px;
 }
 
 .eq-right {
     white-space: nowrap;
 }
+
+
 .fraction {
     display: inline-block;
     vertical-align: middle;
